[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "STIFMaps"
version = "0.0.8"
authors = [
  { name="Connor Stashko", email="cstashko@berkeley.edu" },
]
description = "STIFMaps predicts the local stiffness of breast tissue using the morphology of collagen"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.21.6",
    "matplotlib >= 3.5.3",
    "seaborn >= 0.11.2",
    "pandas >= 1.3.5",
    "xlrd >= 2.0.1",
    "scipy >= 1.7.3",
    "jupyter >= 1.0.0",
    "torch >= 1.10.2",
    "torchvision >= 0.11.3",
    "scikit-learn >= 1.0.2",
    "scikit-image >= 0.19.3",
    "tqdm >= 4.64.0",
    "opencv-python >= 4.6.0.66"
]
license = "MIT"

[project.urls]
"Homepage" = "https://github.com/cstashko/STIFMaps"
"Bug Tracker" = "https://github.com/cstashko/STIFMaps/issues"
